added styling page

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
@@ -9,7 +9,10 @@
     </head>
 
     <body>
-        <h1>A Holy Grail Layout Example</h1>
+        <header>
+            <h1>A Holy Grail Layout Example</h1>
+        </header>
+
         <nav>
             <ul>
                 <li><a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Stardew Valley WIki</a></li>
