added more to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Sage Reid | WDD 130 </title>
+        <meta name="description" content="Sage Reid wdd130 webpage for class">
+        <meta name="author" content="Sage Reid">
         <link rel = "stylesheet" href = "styles.css">
     </head>
 
@@ -21,6 +23,13 @@
             <p>My name is Sage Reid. I live in the U.S. in the state of Utah. Some of my hobbies include 
                 reading, playing video games and snuggling with my cats.</p>
         </main>
+
+        <aside>
+            <h2>Utah</h2>
+            <img src="images/utah.jpg" alt="Utah Mountains">
+            <p>Utah is a state in the United States known for its natural beauty, including deserts,
+                mountains, and national parks. It's also known as the Beehive State</p>
+        </aside>
 
         <footer>
             <p>©2025 💠 Sage Reid 💠 Utah, U.S.</p>
