--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Sage Reid | WDD 130 </title>
         <meta name="description" content="Sage Reid wdd130 webpage for class">
         <meta name="author" content="Sage Reid">
-        <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "styles/styles.css">
     </head>
 
     <body>
