added list, box class, playing around with positioning and stuff

--- a/index.html
+++ b/index.html
@@ -14,17 +14,36 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
+                <a href="https://linkedin.com">LinkedIn</a>
+                <a href="https://facebook.com">FaceBook</a>
             </nav>
         </header>
 
         <main>
             <h1>Sage Reid | WDD 130</h1>
             <img src="images/profile.webp" alt="Sage Reid" width="200">
-            <p>My name is Sage Reid. I live in the U.S. in the state of Utah. Some of my hobbies include 
-                reading, playing video games and snuggling with my cats.</p>
+            <p>My name is Sage Reid. I live in the U.S. in the state of Utah. I moved here from Washington state about
+                4 years ago. I like it here a lot better because we lived in Kennewick which was very dry and full of
+                sagebrush. I really love the snow which is part of why I love Utah so much. In my free time I mostly
+                play video games. My favorite games are Breath of the Wild and Stardew Valley. I also enjoy Minecraft,
+                Nier Automata, Spiritfarer and all LEGO games. I have always loved reading and my favorite series is
+                the Inheritance Cycle. I have read it probably 10 times. My family includes my mom and dad and 3 brothers.
+                2 of my brothers are older and since I didn't have any sisters I had a bit of a hard time when I was
+                little. I now have a sister-in-law and I love her so much! We also have 2 cats. Their names are Iroh
+                and Korra. We named them from Avatar the Last Airbender. I love my cats and really enjoy snuggling
+                with them. They bring so much joy into my life.</p>
+
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng"
+                       target="_blank">Logan Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng"
+                       target="_blank">Colombia River Washington Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"
+                       target="_blank">Portland Oregon Temple</a></li>
+            </ul>
         </main>
 
-        <aside>
+        <aside class="box">
             <h2>Utah</h2>
             <img src="images/utah.jpg" alt="Utah Mountains">
             <p>Utah is a state in the United States known for its natural beauty, including deserts,
@@ -36,4 +55,6 @@
 
         </footer>
     </body>
+
+<!--last modified: 1-20-2025-->
 </html>
