added rafting about page

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                 sagebrush. I really love the snow which is part of why I love Utah so much. In my free time I mostly
                 play video games. My favorite games are Breath of the Wild and Stardew Valley. I also enjoy Minecraft,
                 Nier Automata, Spiritfarer and all LEGO games. I have always loved reading and my favorite series is
-                the Inheritance Cycle. I have read it probably 10 times. My family includes my mom and dad and 3 brothers.
-                2 of my brothers are older and since I didn't have any sisters I had a bit of a hard time when I was
-                little. I now have a sister-in-law and I love her so much! We also have 2 cats. Their names are Iroh
-                and Korra. We named them from Avatar the Last Airbender. I love my cats and really enjoy snuggling
+                the Inheritance Cycle. I have read it probably 10 times. My family includes my mom and dad and 3
+                brothers.2 of my brothers are older and since I didn't have any sisters I had a bit of a hard time when
+                I was little. I now have a sister-in-law and I love her so much! We also have 2 cats. Their names are
+                Iroh and Korra. We named them from Avatar the Last Airbender. I love my cats and really enjoy snuggling
                 with them. They bring so much joy into my life.</p>
 
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng"
                        target="_blank">Logan Utah Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng"
-                       target="_blank">Colombia River Washington Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?
+                lang=eng" target="_blank">Colombia River Washington Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"
                        target="_blank">Portland Oregon Temple</a></li>
             </ul>
