--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
         <title>About Us Page</title>
         <meta name="description" content="rafting site about us page">
         <meta name="author" content="Sage Reid">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/rafting.css">
 
 <!--Heading Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
