added rafting about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,8 +15,7 @@
 <!--Text Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Contrail+One&family=Kantumruy+Pro:ital,wght@0,100..700;1,
-        100..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -31,9 +30,9 @@
         </header>
 
         <main>
-            <div class = "hero">
-                <img src="images/hero.jpg" alt="banner image">
-                <h1>Sampson Rafting</h1>
+            <div class="hero">
+                <img id="hero_img" src="images/hero.jpg" alt="banner">
+                <h1>Water Rafting</h1>
                 <article>
                     <img src="images/happy.jpg" alt="happy clients">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dolor dolore eaque illum
