--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,14 +15,17 @@
 
     <body>
         <header>
-            <img src="images/logo.jpg" alt="Logo">
+            <img src="images/logo_circle.png" alt="Logo">
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </nav>
         </header>
+
 
         <main>
             <div class="hero">
@@ -35,26 +38,59 @@
                 </article>
             </div>
 
-            <section>
-                <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab debitis eveniet excepturi illum
-                    ipsa magni nesciunt nostrum, quis quisquam sunt.</p>
+            <section class="history">
+                <h2 class="row1">History</h2>
+                <p id="p_left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ea itaque iusto laboriosam pariatur possimus qui, quod suscipit vitae voluptatum!</p>
+                <img src="images/history.jpg" alt="employees">
+                <p id="p_right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deserunt obcaecati quaerat quos reiciendis totam voluptates. Impedit provident rem temporibus.</p>
             </section>
 
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <img src="images/adventure_one.jpg" alt="rafting picture 1">
-                <img src="images/adventure_two.jpg" alt="rafting picture 2">
-                <img src="images/adventure_three.jpg" alt="rafting picture 3">
-                <img src="images/adventure_four.jpg" alt="rafting picture 4">
-                <img src="images/adventure_five.jpg" alt="rafting picture 5">
+
+
+<!--For the caption I just chose random rivers. They do not correlate to the actual image at all-->
+            <section class="adventure">
+                <h2 class="row1">Adventure Awaits You!</h2>
+                <figure>
+                    <img src="images/adventure_one.jpg" alt="rafting picture 1">
+                    <figcaption>
+                        Cataract Canyon
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure_two.jpg" alt="rafting picture 2">
+                    <figcaption>
+                        Gates of Lodore
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure_three.jpg" alt="rafting picture 3">
+                    <figcaption>
+                        Green River
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure_four.jpg" alt="rafting picture 4">
+                    <figcaption>
+                        Westwater Canyon
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure_five.jpg" alt="rafting picture 5">
+                    <figcaption>
+                        San Juan River
+                    </figcaption>
+                </figure>
             </section>
         </main>
 
         <footer>
             <p>©2025 | Sampson Rafting | Sage Reid</p>
             <nav>
-                <a href="http://facebook.com">
+                <a href="http://facebook.com" target="_blank">
                     <img src="images/facebook.webp" alt="facebook"></a>
 
                 <a href="http://twitter.com">
