updated rafting about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -89,7 +89,7 @@
 
         <footer>
             <p>©2025 | Sampson Rafting | Sage Reid</p>
-            <nav>
+            <nav class="social">
                 <a href="http://facebook.com" target="_blank">
                     <img src="images/facebook.webp" alt="facebook"></a>
 
