updated rafting about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Us Page</title>
-        <meta name="description" content="rafting site about us page">
+        <title>About Us Page | Sampson Rafting</title>
+        <meta name="description" content="About Us Page for Sampson White Water Rafting Company">
         <meta name="author" content="Sage Reid">
         <link rel="stylesheet" href="styles/rafting.css">
 
