contact us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,7 +41,7 @@
             <section class="history">
                 <h2 class="row1">History</h2>
                 <p id="p_left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ea itaque iusto laboriosam pariatur possimus qui, quod suscipit vitae voluptatum!</p>
-                <img src="images/history.jpg" alt="employees">
+                <img class="img1" src="images/history.jpg" alt="employees">
                 <p id="p_right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deserunt obcaecati quaerat quos reiciendis totam voluptates. Impedit provident rem temporibus.</p>
             </section>
 
