--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,6 +61,52 @@
                 </article>
             </section>
 
+            <section class="images">
+                <img class="img1" src="images/contact_one.jpg" alt="Employee 1">
+                <img class="img1" src="images/contact_two.jpg" alt="Employee 2">
+                <img class="img1" src="images/contact_three.jpg" alt="Employee 3">
+            </section>
+
+            <form>
+                <h2>Contact Form</h2>
+                <fieldset>
+                    <legend>Personal Information</legend>
+
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name">
+
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email">
+                </fieldset>
+
+                <fieldset>
+                    <legend>Inquiry Purpose</legend>
+
+                    <p>Reason For Contacting Us</p>
+                    <section>
+                        <div>
+                            <input type="radio" id="general" name="radio">
+                            <label for="general">General Inquiry</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="reservation" name="radio">
+                            <label for="reservation">Reservation Question</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="website" name="radio">
+                            <label for="website">Website Suggestion</label>
+                        </div>
+                    </section>
+
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message"></textarea>
+
+                    <label for="subscribe">Subscribe to Newsletter</label>
+                    <input class="check" type="checkbox" id="subscribe" name="subscribe">
+
+                    <button type="submit">Submit Form</button>
+                </fieldset>
+            </form>
         </main>
 
         <footer>
