contact us page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -48,16 +48,14 @@
 
                 <article>
                     <h3>Address</h3>
-                    <p>175 N 300 E, Logan, UT 84321-4720</p>
+                    <p>408 E  100 N</p>
+                    <p>Logan, UT 84321</p>
+
                 </article>
 
                 <article>
                     <h3>Map</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2479.7201639793484!2d-111.
-                        82181470609243!3d41.73287961683811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87547
-                        e6f8f22bf35%3A0xedd60717caf02725!2s522%20E%20100%20N%2C%20Logan%2C%20UT%2084321!5e0!3m2!
-                        1sen!2sus!4v1738784074711!5m2!1sen!2sus" width="600" height="450"
-                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.4050070843286!2d-111.82644835467237!3d41.733356338004356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87547e6e35c8e5b3%3A0xbe94d975c2a975ae!2s408%20E%20100%20N%2C%20Logan%2C%20UT%2084321!5e0!3m2!1sen!2sus!4v1738879531764!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </article>
             </section>
 
