contact us page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,6 +28,7 @@
 
 
         <main>
+            <h1 class="contact_h1">Contact Sampson Rafting</h1>
             <section class="info">
                 <h2>Contact Information</h2>
                 <article>
