contact us page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,9 +61,18 @@
             </section>
 
             <section class="images">
-                <img class="img1" src="images/contact_one.jpg" alt="Employee 1">
-                <img class="img1" src="images/contact_two.jpg" alt="Employee 2">
-                <img class="img1" src="images/contact_three.jpg" alt="Employee 3">
+                <figure>
+                    <img class="img1" src="images/contact_one.jpg" alt="Employee 1">
+                    <figcaption>Focused and ready to tackle the day!</figcaption>
+                </figure>
+                <figure>
+                    <img class="img1" src="images/contact_two.jpg" alt="Employee 2">
+                    <figcaption>Collaborating and sharing ideas for success.</figcaption>
+                </figure>
+                <figure>
+                    <img class="img1" src="images/contact_three.jpg" alt="Employee 3">
+                    <figcaption>Teamwork in action, making great things happen!</figcaption>
+                </figure>
             </section>
 
             <form>
