added home page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,35 +51,35 @@
             <section class="adventure">
                 <h2 class="row1">Adventure Awaits You!</h2>
                 <figure>
-                    <img src="images/adventure_one.jpg" alt="rafting picture 1">
+                    <img class="img1" src="images/adventure_one.jpg" alt="rafting picture 1">
                     <figcaption>
                         Cataract Canyon
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure_two.jpg" alt="rafting picture 2">
+                    <img class="img1" src="images/adventure_two.jpg" alt="rafting picture 2">
                     <figcaption>
                         Gates of Lodore
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure_three.jpg" alt="rafting picture 3">
+                    <img class="img1" src="images/adventure_three.jpg" alt="rafting picture 3">
                     <figcaption>
                         Green River
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure_four.jpg" alt="rafting picture 4">
+                    <img class="img1" src="images/adventure_four.jpg" alt="rafting picture 4">
                     <figcaption>
                         Westwater Canyon
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure_five.jpg" alt="rafting picture 5">
+                    <img class="img1" src="images/adventure_five.jpg" alt="rafting picture 5">
                     <figcaption>
                         San Juan River
                     </figcaption>
