--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -75,7 +75,7 @@
                 </figure>
             </section>
 
-            <form>
+            <form class="form_contact">
                 <h2>Contact Form</h2>
                 <fieldset>
                     <legend>Personal Information</legend>
