--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/about.html">Rafting Website</a>
+                <a href="wwr/index.html">Rafting Website</a>
                 <a href="https://linkedin.com">LinkedIn</a>
                 <a href="https://facebook.com">FaceBook</a>
             </nav>
