added home page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -42,8 +42,63 @@
                 <p><a href="contact.html">Click Here to Contact Us</a></p>
             </div>
 
-            <table>
+            <table class="img1">
+                <caption>Table with information about rafting trips</caption>
+                <thead>
+                    <tr>
+                        <th scope="col" rowspan="2">River Name</th>
+                        <th scope="col" rowspan="2">Length of Trip</th>
+                        <th scope="col" colspan="3">Cost Estimate Per Person</th>
+                    </tr>
+                    <tr>
+                        <th scope="col">1-3</th>
+                        <th scope="col">4-8</th>
+                        <th scope="col">8+</th>
+                    </tr>
+                </thead>
 
+                <tbody>
+                    <tr>
+                        <th scope="row">Green River</th>
+                        <td>2 hours</td>
+                        <td>$70</td>
+                        <td>$120</td>
+                        <td>$170</td>
+                    </tr>
+
+                    <tr>
+                        <th scope="row">Cataract Canyon</th>
+                        <td>5 hours</td>
+                        <td>$100</td>
+                        <td>$200</td>
+                        <td>$300</td>
+                    </tr>
+
+                    <tr>
+                        <th scope="row">San Juan River</th>
+                        <td>10 hours</td>
+                        <td>$500</td>
+                        <td>$650</td>
+                        <td>$800</td>
+                    </tr>
+
+                    <tr>
+                        <th scope="row">Gates of Lodore</th>
+                        <td>1.5 days</td>
+                        <td>$700</td>
+                        <td>$900</td>
+                        <td>$1,200</td>
+                    </tr>
+
+
+                    <tr>
+                        <th scope="row">Westwater Canyon</th>
+                        <td>3 days</td>
+                        <td>$2,000</td>
+                        <td>$3,000</td>
+                        <td>$4,500</td>
+                    </tr>
+                </tbody>
             </table>
         </main>
 
