added home page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -53,13 +53,13 @@
                <p><a href="trips.html">Click Here to Plan Your Trip Now</a></p>
             </div>
 
-            <section class="home_info">
+            <div class="home_info">
                 <img class="img1" src="images/home_one.jpg" alt="image 1">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam aliquid asperiores assumenda aut blanditiis commodi dolore dolorum eius est eum exercitationem illo incidunt ipsa ipsam ipsum itaque minus molestiae natus necessitatibus numquam obcaecati omnis perferendis ratione sapiente sed tempora vel velit voluptatem, voluptatum. Amet consequuntur eius fuga fugit molestias, odit possimus quam repudiandae tempore? Aperiam asperiores culpa esse excepturi hic inventore laboriosam modi nisi, quo repudiandae sapiente tempora tenetur voluptatum! Ab accusantium atque cumque dignissimos dolorem est, fuga harum ipsum nesciunt repellendus sint temporibus vel veritatis. Adipisci consectetur eligendi est eum harum necessitatibus porro quae recusandae repellat ullam? Assumenda.</p>
                 <img class="img1" src="images/home_two.jpg" alt="image 2">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur enim fuga recusandae. Delectus eveniet explicabo illum placeat quae. Atque facilis modi, nostrum possimus ratione saepe tempore. Alias aliquid, dolor laudantium omnis perspiciatis quo voluptates. Corporis enim eos maiores porro quod sint soluta. Consequatur fuga in maxime quibusdam sed voluptatem! Ab ad adipisci aliquam asperiores, atque autem cumque distinctio dolorem dolores ea eaque esse eum excepturi fuga illum ipsum iure labore magni minima minus nobis numquam obcaecati officia placeat quis reprehenderit similique soluta suscipit tempore vel veniam, veritatis voluptas voluptatum! Ad fugit illum in ipsum laboriosam nam numquam quia ratione, tempora.</p>
 
-            </section>
+            </div>
         </main>
 
         <footer>
