--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -28,14 +28,14 @@
 
 
         <main>
-            <section class="home_info">
+            <div class="home_info">
                 <img class="img1" src="images/trips_one.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad amet, asperiores consequatur cum dignissimos distinctio dolorum facilis ipsa minus nostrum, quam quisquam, ullam! Accusantium ducimus ipsam quia vero! A alias aspernatur assumenda consectetur consequatur corporis delectus deserunt dolor doloremque dolores doloribus eaque earum eligendi eos error est et eum excepturi fuga libero molestias nemo, neque numquam praesentium quae qui quibusdam quidem recusandae repellat sunt suscipit tempore totam veniam. Eum libero quidem quod rem sunt.</p>
                 <img class="img1" src="images/trips_two.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, cumque cupiditate deleniti ducimus error est ex expedita hic impedit iusto laudantium molestiae necessitatibus odit optio perferendis, perspiciatis quam quibusdam quod repellendus reprehenderit repudiandae tempora tenetur voluptate? Beatae debitis, dolorem id itaque laboriosam nobis officia reprehenderit sed. Amet aperiam architecto eveniet fugiat inventore? Nemo, qui, tempora! Cupiditate deserunt earum eius eos et fugiat laudantium modi natus necessitatibus non nostrum obcaecati pariatur quam, quod repellendus, tenetur velit!</p>
                 <img class="img1" src="images/trips_three.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam asperiores consequuntur dicta dignissimos dolorem esse eum, facere illo illum incidunt ipsum maxime molestias necessitatibus nihil perferendis porro provident quam quasi quibusdam quisquam sit soluta tempore totam vero voluptatibus! A commodi doloribus est magni minima nemo optio ullam voluptate voluptatum. A architecto deleniti eos iusto nobis non perspiciatis quos reiciendis sint sunt! A debitis id illo impedit nihil possimus quas reiciendis sapiente similique voluptas.</p>
-            </section>
+            </div>
 
             <div class="link">
                 <h2>Questions?</h2>
