added home page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -41,9 +41,9 @@
                 <h2>Get 50% Off Your Next Trip!</h2>
                 <p>Sign up for our weekly newsletter to receive emails about new trips and deals, plus 50% off
                 your next white water rafting trip.</p>
-                <label for="name" hidden="hidden">Enter Your First and Last Name</label>
+                <label for="name" hidden="hidden" aria-label="Enter your first and last name"></label>
                 <input type="text" id="name" name="name" placeholder="First and Last Name">
-                <label for="email" hidden="hidden">Enter Your Email Address</label>
+                <label for="email" hidden="hidden" aria-label="Enter your email address"></label>
                 <input type="email" id="email" name="email" placeholder="email">
                 <button type="submit">I'm In!</button>
 
